发布1.0.0版本 更改界面图片 更改打包命令

--- a/app/src/main/res/layout/titlebar_whit_close.xml
+++ b/app/src/main/res/layout/titlebar_whit_close.xml
@@ -40,7 +40,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:background="@drawable/btn_close" />
+            app:tint="@color/colorAccent"
+            android:src="@drawable/btn_close" />
     </LinearLayout>
 
 
@@ -63,7 +64,7 @@
             android:ellipsize="end"
             android:text="标题"
             android:textStyle="bold"
-            android:textColor="@color/black1"/>
+            android:textColor="@color/colorAccent"/>
     </LinearLayout>
 
     <LinearLayout
