修改默认白色字体颜色

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="startBlueColor_btn">#096aff</color>
     <color name="select_text_color">#1E88E5</color>
     <color name="startOrgColor_btn">#e7c28e</color>
-    <color name="slight_yellow">#FFF1DC</color>
+    <color name="slight_yellow">#ffffff</color>
     <color name="slight_yellow1">#FFFBF0</color>
     <color name="dark_grey">#F5F5F5</color>
     <color name="dark_grey_1">#F0F0F0</color>
