--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.kayu.business_car_owner.ui.HomeFragment"
+        android:name="com.kayu.business_car_owner.ui.HomeFragmentNew"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
