--- a/app/src/main/res/layout/item_category_lay.xml
+++ b/app/src/main/res/layout/item_category_lay.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="@dimen/dp_5">
 
     <ImageView
         android:id="@+id/item_cate_img"
@@ -12,7 +13,8 @@
         android:src="@color/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/item_cate_text"/>
 
     <TextView
         android:id="@+id/item_cate_text"
@@ -25,6 +27,7 @@
         android:textSize="@dimen/sp_11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/item_cate_text_sub"
         app:layout_constraintTop_toBottomOf="@id/item_cate_img" />
 
     <TextView
@@ -32,12 +35,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/grayText2"
+        android:layout_marginBottom="@dimen/dp_5"
         android:textSize="@dimen/sp_10"
         android:maxLines="1"
         android:ellipsize="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_cate_text" />
+        app:layout_constraintTop_toBottomOf="@id/item_cate_text"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/item_cate_tag"
