--- a/app/src/main/res/layout/item_img_title_lay.xml
+++ b/app/src/main/res/layout/item_img_title_lay.xml
@@ -16,8 +16,7 @@
             android:gravity="center"
             android:layout_width="@dimen/dp_110"
             android:layout_height="wrap_content"
-            android:padding="@dimen/dp_4"
-            android:src="@mipmap/home_img_title"/>
+            android:padding="@dimen/dp_4"/>
     </LinearLayout>
 
 
