--- a/app/src/main/res/layout/fragment_home_new.xml
+++ b/app/src/main/res/layout/fragment_home_new.xml
@@ -102,15 +102,25 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginHorizontal="@dimen/dp_5"/>
-                            <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/home_sort_title_rv"
+
+                            <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginHorizontal="@dimen/dp_5"/>
-                            <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/home_category2_rv"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content" />
+                                android:layout_marginHorizontal="@dimen/dp_10"
+                                android:layout_marginBottom="@dimen/dp_10"
+                                android:orientation="vertical"
+                                android:background="@drawable/home_product_bg_shape">
+                                <androidx.recyclerview.widget.RecyclerView
+                                    android:id="@+id/home_sort_title_rv"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginHorizontal="@dimen/dp_5"/>
+                                <androidx.recyclerview.widget.RecyclerView
+                                    android:id="@+id/home_category2_rv"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content" />
+                            </LinearLayout>
+
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
