去除无用注释

--- a/app/src/main/res/drawable/home_product_bg_shape.xml
+++ b/app/src/main/res/drawable/home_product_bg_shape.xml
@@ -20,7 +20,7 @@
         android:bottomRightRadius="@dimen/dp_10"/>
 
     <gradient
-    android:startColor="#E8F5FF"
+    android:startColor="#F2F9FF"
     android:endColor="#F6FBFF"
     android:angle="270"/>
 
