--- a/app/src/main/res/drawable/home_sort_title_selector.xml
+++ b/app/src/main/res/drawable/home_sort_title_selector.xml
@@ -11,25 +11,37 @@
     </item>
     <item android:state_focused="true">
         <shape>
-            <solid android:color="@color/startColor_btn" />
+<!--            <solid android:color="@color/startColor_btn" />-->
             <corners android:radius="@dimen/dp_8" />
 <!--            <stroke android:color="@color/endColor_btn"-->
 <!--                android:width="@dimen/dp_1"/>-->
+            <gradient
+                android:startColor="@color/startColor_btn"
+                android:endColor="@color/endColor_btn"
+                android:angle="0"/>
         </shape>
     </item>
 
     <item android:state_checked="true">
         <shape>
-            <solid android:color="@color/startColor_btn" />
+<!--            <solid android:color="@color/startColor_btn" />-->
             <corners android:radius="@dimen/dp_8" />
+            <gradient
+                android:startColor="@color/startColor_btn"
+                android:endColor="@color/endColor_btn"
+                android:angle="0"/>
 <!--            <stroke android:color="@color/endColor_btn"-->
 <!--                android:width="@dimen/dp_1"/>-->
         </shape>
     </item>
     <item android:state_selected="true">
         <shape>
-            <solid android:color="@color/startColor_btn" />
+<!--            <solid android:color="@color/startColor_btn" />-->
             <corners android:radius="@dimen/dp_8" />
+            <gradient
+                android:startColor="@color/startColor_btn"
+                android:endColor="@color/endColor_btn"
+                android:angle="0"/>
 <!--            <stroke android:color="@color/endColor_btn"-->
 <!--                android:width="@dimen/dp_1"/>-->
         </shape>
