--- a/app/src/main/res/layout/fragment_home_new.xml
+++ b/app/src/main/res/layout/fragment_home_new.xml
@@ -4,9 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="true"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
     tools:context=".ui.HomeFragmentNew">
 
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
@@ -41,10 +38,13 @@
                         android:id="@+id/home_smart_banner"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/dp_180"
+                        android:clickable="true"
+                        android:focusableInTouchMode="true"
                         app:image_scale_type="fit_xy"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"/>
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:focusable="true" />
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
@@ -114,11 +114,13 @@
                                     android:id="@+id/home_sort_title_rv"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
+                                    android:layout_marginTop="@dimen/dp_15"
+                                    android:layout_marginBottom="@dimen/dp_10"
                                     android:layout_marginHorizontal="@dimen/dp_5"/>
                                 <androidx.recyclerview.widget.RecyclerView
                                     android:id="@+id/home_category2_rv"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content" />
+                                    android:layout_height="wrap_content"/>
                             </LinearLayout>
 
                         </LinearLayout>
