--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -96,8 +96,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text=""
-                                android:layout_marginTop="@dimen/dp_5"
-                                android:layout_marginEnd="@dimen/dp_40"
+                                android:layout_marginEnd="@dimen/dp_30"
                                 android:textColor="@color/black1"
                                 android:textSize="@dimen/sp_14"
                                 app:layout_constraintEnd_toEndOf="parent"
@@ -126,7 +125,21 @@
                                 android:layout_marginTop="@dimen/dp_25"
                                 app:layout_constraintTop_toBottomOf="@id/personal_card_num"
                                 app:layout_constraintStart_toEndOf="@id/personal_explain_content" />
-
+                            <TextView
+                                android:visibility="gone"
+                                android:id="@+id/personal_recharge"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text=""
+                                android:layout_marginTop="@dimen/dp_25"
+                                android:layout_marginEnd="@dimen/dp_20"
+                                android:textColor="@color/white"
+                                android:textSize="@dimen/sp_14"
+                                android:paddingHorizontal="@dimen/dp_24"
+                                android:paddingVertical="@dimen/dp_4"
+                                android:background="@drawable/yellow_buttom_shape"
+                                app:layout_constraintTop_toBottomOf="@id/personal_card_num"
+                                app:layout_constraintEnd_toEndOf="parent"/>
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
