--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,10 +25,11 @@
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsTranslucent">true</item>
     </style>
-    <style name="LaunchTheme" parent="@android:style/Theme.Light.NoTitleBar.Fullscreen">
-    <item name="android:windowBackground">@mipmap/ic_login_shanpin</item>
-    <item name="android:windowFullscreen">true</item>
-</style>
+
+<!--    <style name="LaunchTheme" parent="@android:style/Theme.Light.NoTitleBar.Fullscreen">-->
+<!--        <item name="android:windowBackground">@mipmap/ic_login_shanpin</item>-->
+<!--        <item name="android:windowFullscreen">true</item>-->
+<!--    </style>-->
 
     <style name="ActivityDialogStyleaa">
         <!--隐藏action bar和title bar-->
