--- a/app/src/main/res/layout/activity_wash_order.xml
+++ b/app/src/main/res/layout/activity_wash_order.xml
@@ -262,7 +262,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingStart="@dimen/dp_15"
-                        android:text="特权专属折扣"
+                        android:text="抵扣"
                         android:textColor="@color/black1"
                         android:textSize="@dimen/sp_14"
                         app:layout_constraintStart_toStartOf="parent"
