修改更换域名的时候存储cookies报错的问题。 调整个人中心界面。 更换服务器域名连接。 调整洗车订单界面布局。

--- a/app/src/main/res/layout/activity_wash_station.xml
+++ b/app/src/main/res/layout/activity_wash_station.xml
@@ -594,8 +594,8 @@
             app:layout_constraintBottom_toBottomOf="parent">
             <View
                 android:layout_width="@dimen/dp_0"
-                android:layout_height="@dimen/dp_1"
-                android:background="@color/black1"
+                android:layout_height="@dimen/dp_1_5"
+                android:background="@color/divider"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
@@ -627,10 +627,10 @@
                 android:id="@+id/wash_pay_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/sp_18"
+                android:textSize="@dimen/sp_20"
                 android:textColor="@color/black1"
                 android:textStyle="bold"
-                android:text="0.0"
+                android:text="0.00"
                 app:layout_constraintBottom_toTopOf="@id/id_tag_rebate_describe"
                 app:layout_constraintStart_toEndOf="@id/id_ddd"
                 />
@@ -639,7 +639,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_20"
-                android:layout_marginBottom="@dimen/dp_10"
+                android:layout_marginBottom="@dimen/dp_13"
                 android:gravity="center"
                 android:textSize="@dimen/sp_12"
                 android:textColor="@color/black1"
@@ -650,7 +650,7 @@
                 android:id="@+id/wash_station_rebate_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="￥0.0"
+                android:text="￥0.00"
                 android:textStyle="bold"
                 android:textSize="@dimen/sp_12"
                 android:textColor="#d1333f"
@@ -662,7 +662,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:paddingHorizontal="@dimen/dp_30"
+                android:paddingHorizontal="@dimen/dp_50"
                 android:paddingVertical="@dimen/dp_20"
                 android:textColor="@color/slight_yellow"
                 android:text="去支付"
