--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -130,14 +130,13 @@
                                 android:id="@+id/personal_recharge"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text=""
-                                android:layout_marginTop="@dimen/dp_25"
                                 android:layout_marginEnd="@dimen/dp_20"
                                 android:textColor="@color/white"
                                 android:textSize="@dimen/sp_14"
                                 android:paddingHorizontal="@dimen/dp_24"
                                 android:paddingVertical="@dimen/dp_4"
                                 android:background="@drawable/yellow_buttom_shape"
+                                app:layout_constraintBaseline_toBaselineOf="@id/personal_user_expAmt"
                                 app:layout_constraintTop_toBottomOf="@id/personal_card_num"
                                 app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -243,8 +242,9 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="我的收益（元）"
-                                    android:textSize="@dimen/sp_11"
+                                    android:textSize="@dimen/sp_12"
                                     android:layout_marginTop="@dimen/dp_6"
+                                    android:textStyle="bold"
                                     android:textColor="@color/grayText4"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintEnd_toEndOf="@id/id_tag_divider"
@@ -267,7 +267,8 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="可提现（元）"
-                                    android:textSize="@dimen/sp_11"
+                                    android:textStyle="bold"
+                                    android:textSize="@dimen/sp_12"
                                     android:layout_marginTop="@dimen/dp_6"
                                     android:textColor="@color/grayText4"
                                     app:layout_constraintStart_toStartOf="@id/id_tag_divider"
