添加用户为游客的时候屏蔽相关页面的逻辑，修改应用商店审核更改相关界面描述

--- a/app/src/main/res/layout/activity_activation.xml
+++ b/app/src/main/res/layout/activity_activation.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/id_tag_card_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="卡    号"
+                android:text="账    号"
                 android:textSize="@dimen/sp_12"
                 android:textColor="@color/colorAccent"
                 android:textStyle="bold"
@@ -51,7 +51,7 @@
                 android:textSize="@dimen/sp_12"
                 android:maxLength="30"
                 android:singleLine="true"
-                android:hint="请输入您的卡号"
+                android:hint="请输入您的账号"
                 android:textColor="@color/colorAccent"
                 android:layout_marginStart="@dimen/dp_10"
                 android:paddingVertical="@dimen/dp_5"
@@ -90,7 +90,7 @@
                 android:paddingHorizontal="@dimen/dp_5"
                 android:paddingVertical="@dimen/dp_5"
                 android:singleLine="true"
-                android:hint="请输入您的卡密码"
+                android:hint="请输入您的密码"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/sp_12"
                 app:layout_constraintBottom_toBottomOf="parent"
