--- a/app/src/main/res/layout/activity_login_new.xml
+++ b/app/src/main/res/layout/activity_login_new.xml
@@ -53,7 +53,7 @@
             android:gravity="center"
             android:minHeight="0dp"
             android:paddingVertical="@dimen/dp_14"
-            android:text="立即激活特权卡"
+            android:text="立即激活"
             android:textColor="@color/select_text_color"
             android:textStyle="bold"
             android:textSize="@dimen/sp_14"
