--- a/app/src/main/res/layout/fragment_home_new.xml
+++ b/app/src/main/res/layout/fragment_home_new.xml
@@ -159,6 +159,7 @@
 
                     android:layout_width="@dimen/dp_0"
                     android:paddingTop="@dimen/dp_40"
+                    android:paddingBottom="@dimen/dp_15"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -192,7 +193,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/dp_2"
-                        android:paddingVertical="@dimen/dp_10"
                         android:text="定位中..."
                         android:textColor="@color/white"
                         android:textSize="@dimen/sp_14"
