--- a/app/src/main/res/layout/fragment_home_new.xml
+++ b/app/src/main/res/layout/fragment_home_new.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.scwang.smart.refresh.header.ClassicsHeader
+        <com.kayu.business_car_owner.ui.refresh.CustomRefreshHeader
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:srlAccentColor="@color/black"
