--- a/app/src/main/res/layout/titlebar_whit_close.xml
+++ b/app/src/main/res/layout/titlebar_whit_close.xml
@@ -9,10 +9,10 @@
     android:background="@color/white">
     <LinearLayout
         android:id="@+id/title_back_btu"
-        android:layout_width="@dimen/dp_40"
+        android:layout_width="@dimen/dp_50"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:gravity="center_vertical"
+        android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
@@ -26,24 +26,6 @@
             android:src="@mipmap/normal_btu_white"
             app:tint="@color/colorAccent" />
     </LinearLayout>
-    <LinearLayout
-        android:id="@+id/title_close_btn"
-        android:layout_width="@dimen/dp_40"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        app:layout_constraintStart_toEndOf="@id/title_back_btu"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-        <ImageView
-            android:id="@+id/title_close_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            app:tint="@color/colorAccent"
-            android:src="@drawable/btn_close" />
-    </LinearLayout>
-
 
     <LinearLayout
         android:id="@+id/title_name_lay"
@@ -52,8 +34,8 @@
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/title_close_btn"
-        app:layout_constraintEnd_toStartOf="@id/title_arrow_lay">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
         <TextView
             android:id="@+id/title_name_tv"
             android:layout_width="wrap_content"
@@ -68,32 +50,22 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/title_arrow_lay"
-        android:layout_width="@dimen/dp_80"
-        android:layout_height="match_parent"
+        android:id="@+id/title_close_btn"
+        android:layout_width="@dimen/dp_50"
+        android:layout_height="@dimen/dp_0"
         android:gravity="center"
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/title_name_lay"
         app:layout_constraintEnd_toEndOf="parent">
-        <TextView
-            android:id="@+id/title_arrow_tv"
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/dp_8"
-            android:layout_marginTop="@dimen/dp_3"
-            android:padding="@dimen/dp_2"
-            android:maxLines="1"
-            android:maxEms="11"
-            android:ellipsize="end"
-            android:textSize="@dimen/sp_13"
-            android:text="保存到相册"
-            android:textColor="@color/colorAccent"/>
+        <ImageView
+            android:id="@+id/title_close_iv"
+            android:layout_width="@dimen/dp_25"
+            android:layout_height="@dimen/dp_25"
+            android:layout_gravity="center"
+            android:gravity="center"
+            app:tint="@color/colorAccent"
+            android:src="@mipmap/btn_close" />
     </LinearLayout>
-    <!--<View-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="1px"-->
-        <!--android:background="@color/divider"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
