底部导航添加新页面

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,10 +6,9 @@
         android:icon="@drawable/ic_home_selector"
         android:title="@string/title_home" />
 
-<!--    <item-->
-<!--        android:id="@+id/navigation_shop"-->
-<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
-<!--        android:title="@string/title_shop" />-->
+    <item
+        android:id="@+id/navigation_shop"
+        android:title="@string/title_shop" />
 <!--    <item-->
 <!--        android:id="@+id/navigation_consult"-->
 <!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
