周边游商城添加图标，修改加载动图大小，添加密码登录选项

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,6 +8,7 @@
 
     <item
         android:id="@+id/navigation_shop"
+        android:icon="@drawable/ic_shop_selector"
         android:title="@string/title_shop" />
 <!--    <item-->
 <!--        android:id="@+id/navigation_consult"-->
