--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/colorAccent"
     android:layout_height="match_parent">
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:id="@+id/refreshLayout"
@@ -25,7 +26,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_50"
                 android:elevation="@dimen/dp_2"
-                android:background="@color/white"
                 android:id="@+id/title_root_lay">
                 <LinearLayout
                     android:id="@+id/title_back_btu"
@@ -43,8 +43,7 @@
                         android:layout_height="@dimen/dp_25"
                         android:layout_marginStart="@dimen/dp_8"
                         android:padding="@dimen/dp_2"
-                        android:src="@mipmap/normal_btu_white"
-                        app:tint="@color/colorAccent" />
+                        android:src="@mipmap/normal_btu_white" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -66,7 +65,7 @@
                         android:ellipsize="end"
                         android:text="标题"
                         android:textStyle="bold"
-                        android:textColor="@color/colorAccent"/>
+                        android:textColor="@color/white"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -84,7 +83,6 @@
                         android:layout_height="@dimen/dp_25"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        app:tint="@color/colorAccent"
                         android:src="@mipmap/btn_close" />
                 </LinearLayout>
 
