调整登录界面

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -91,7 +91,7 @@
                 android:textSize="@dimen/sp_14" />
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/login_send_sms_lay"
+            android:id="@+id/forget_send_sms_lay"
             android:visibility="visible"
             android:layout_width="0dp"
             android:layout_height="match_parent"
