--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,18 +12,11 @@
         android:id="@+id/id_tag_login_bg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_100"
+        android:layout_marginTop="@dimen/dp_60"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
-        <!--        <TextView-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:textSize="@dimen/sp_24"-->
-        <!--            android:textColor="@color/black"-->
-        <!--            android:textStyle="bold"-->
-        <!--            android:text="欢迎您\n登录车主服务系统"/>-->
         <ImageView
             android:layout_width="@dimen/dp_130"
             android:layout_height="wrap_content"
@@ -34,7 +27,7 @@
     <LinearLayout
         android:layout_width="@dimen/dp_0"
         android:layout_height="@dimen/dp_0"
-        android:layout_marginTop="@dimen/dp_50"
+        android:layout_marginTop="@dimen/dp_30"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/id_tag_login_bg"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,9 +40,7 @@
             android:layout_marginLeft="@dimen/dp_20"
             android:layout_marginRight="@dimen/dp_20"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingTop="@dimen/dp_5"
-            android:paddingBottom="@dimen/dp_5">
+            android:orientation="horizontal">
 
 
             <LinearLayout
@@ -78,90 +69,119 @@
             android:layout_marginRight="@dimen/dp_20"
             android:background="@color/divider" />
 
-
         <LinearLayout
+            android:id="@+id/login_password_lay"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
             android:layout_marginLeft="@dimen/dp_20"
-            android:layout_marginTop="@dimen/dp_30"
             android:layout_marginRight="@dimen/dp_20"
-            android:orientation="horizontal"
-            android:weightSum="10">
+            android:gravity="center"
+            android:visibility="gone"
+            android:orientation="vertical">
+
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                <LinearLayout
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/login_password_edt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingTop="@dimen/dp_5"
-                    android:paddingBottom="@dimen/dp_5"
-                    android:weightSum="10">
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="7">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/login_sms_code_edt"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@null"
-                            android:maxLength="15"
-                            android:padding="@dimen/dp_5"
-                            android:singleLine="true"
-                            android:textSize="@dimen/sp_14" />
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:id="@+id/login_send_sms_lay"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:gravity="center"
-                        android:orientation="horizontal"
-                        android:visibility="visible">
-
-                        <View
-                            android:layout_width="@dimen/dp_0_5"
-                            android:layout_height="match_parent"
-                            android:background="@color/divider" />
-
-                        <TextView
-                            android:id="@+id/login_send_sms_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:paddingLeft="@dimen/dp_10"
-                            android:paddingTop="@dimen/dp_6"
-                            android:paddingRight="@dimen/dp_10"
-                            android:paddingBottom="@dimen/dp_6"
-                            android:singleLine="true"
-                            android:text="获取验证码"
-                            android:textColor="@color/grayText"
-                            android:textSize="@dimen/sp_14" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_1"
-                    android:background="@color/divider" />
+                    android:background="@null"
+                    android:hint="请输入密码"
+                    android:inputType="textPassword"
+                    android:maxLength="16"
+                    android:padding="@dimen/dp_5"
+                    android:singleLine="true"
+                    android:textSize="@dimen/sp_14" />
             </LinearLayout>
-
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"
+                android:background="@color/divider" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_20"
             android:layout_marginTop="@dimen/dp_20"
+            android:layout_marginRight="@dimen/dp_20"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="7">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/login_sms_code_edt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:maxLength="6"
+                        android:hint="请输入验证码"
+                        android:inputType="number"
+                        android:padding="@dimen/dp_5"
+                        android:singleLine="true"
+                        android:textSize="@dimen/sp_14" />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:visibility="visible">
+
+                    <View
+                        android:id="@+id/login_code_divider"
+                        android:layout_width="@dimen/dp_0_5"
+                        android:layout_height="match_parent"
+                        android:background="@color/divider" />
+
+                    <TextView
+                        android:id="@+id/login_send_sms_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:paddingLeft="@dimen/dp_10"
+                        android:paddingTop="@dimen/dp_6"
+                        android:paddingRight="@dimen/dp_10"
+                        android:paddingBottom="@dimen/dp_6"
+                        android:singleLine="true"
+                        android:text="获取验证码"
+                        android:textColor="@color/grayText"
+                        android:textSize="@dimen/sp_14" />
+                    <ImageView
+                        android:id="@+id/login_img_code_iv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:visibility="gone"
+                        android:gravity="center" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"
+                android:background="@color/divider" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_16"
             android:gravity="center"
             android:orientation="vertical">
 
