修改webview软键盘弹出内容不跟随弹出，更新1.0.7版本

--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -11,8 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/white"
-        android:splitMotionEvents="false"
-        android:layout_marginBottom="@dimen/dp_40">
+        android:splitMotionEvents="false">
 
         <include layout="@layout/titlebar_whit_close"/>
 
