屏蔽无用代码

--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/app_color_f6"
-    tools:context=".activity.OrderDetailsActivity">
+    android:background="@color/app_color_f6">
     <include layout="@layout/titlebar_white"/>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:background="@color/white"
