--- a/app/src/main/res/layout/activity_login_new.xml
+++ b/app/src/main/res/layout/activity_login_new.xml
@@ -60,19 +60,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/login_auto_btn"/>
-        <TextView
-            android:visibility="gone"
-            android:id="@+id/login_order_list_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingVertical="@dimen/dp_5"
-            android:layout_marginVertical="@dimen/dp_15"
-            android:text="订单查询"
-            android:textSize="@dimen/sp_13"
-            android:textColor="@color/select_text_color"
-            app:layout_constraintTop_toBottomOf="@id/login_activation_btn"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+<!--        <TextView-->
+<!--            android:visibility="gone"-->
+<!--            android:id="@+id/login_order_list_tv"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:paddingVertical="@dimen/dp_5"-->
+<!--            android:layout_marginVertical="@dimen/dp_15"-->
+<!--            android:text="订单查询"-->
+<!--            android:textSize="@dimen/sp_13"-->
+<!--            android:textColor="@color/select_text_color"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/login_activation_btn"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->
         <TextView
             android:id="@+id/login_user_agreement_tv"
             android:layout_width="wrap_content"
