修改周边先请求数据，等待用户点击进入后渲染页面。 修改定位获取不到的容错判断

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:clickable="true"
     android:focusable="true"
-    android:focusableInTouchMode="true"
-    tools:context=".ui.HomeFragment">
+    android:focusableInTouchMode="true">
+<!--    tools:context=".ui.HomeFragment">-->
 
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:id="@+id/refreshLayout"
