--- a/dialog/src/main/res/layout/bottom_menu_ios.xml
+++ b/dialog/src/main/res/layout/bottom_menu_ios.xml
@@ -20,9 +20,9 @@
                 android:id="@+id/box_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginRight="@dimen/dp_10"
+                android:layout_marginBottom="@dimen/dp_10"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -35,14 +35,14 @@
                         android:id="@+id/txt_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginRight="25dp"
-                        android:layout_marginBottom="15dp"
+                        android:layout_marginLeft="@dimen/dp_25"
+                        android:layout_marginTop="@dimen/dp_15"
+                        android:layout_marginRight="@dimen/dp_25"
+                        android:layout_marginBottom="@dimen/dp_15"
                         android:gravity="center_horizontal"
                         android:text=""
                         android:textColor="@color/tipTextColor"
-                        android:textSize="12dp"
+                        android:textSize="@dimen/sp_12"
                         android:textStyle="bold"
                         android:visibility="gone" />
 
@@ -68,7 +68,7 @@
                         android:dividerHeight="1px"
                         android:listSelector="@android:color/transparent"
                         android:overScrollMode="never"
-                        android:scrollbarSize="7dp"
+                        android:scrollbarSize="@dimen/dp_7"
                         android:scrollbarThumbVertical="@drawable/scrollbar_vertical_track"></ListView>
 
                 </LinearLayout>
@@ -79,23 +79,23 @@
                 android:id="@+id/box_cancel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="-2dp"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_2"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp">
 
                 <TextView
                     android:id="@+id/btn_cancel"
                     android:layout_width="match_parent"
-                    android:layout_height="53dp"
+                    android:layout_height="@dimen/dp_53"
                     android:background="@drawable/button_menu_ios_light"
                     android:gravity="center"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
+                    android:paddingLeft="@dimen/dp_15"
+                    android:paddingRight="@dimen/dp_15"
                     android:singleLine="true"
                     android:text="CANCEL"
                     android:textColor="@color/dialogButtonIOSNormal"
-                    android:textSize="19dp"
+                    android:textSize="@dimen/dp_19"
                     android:textStyle="bold" />
 
             </RelativeLayout>
