--- a/dialog/src/main/res/layout/bottom_menu_kongzue.xml
+++ b/dialog/src/main/res/layout/bottom_menu_kongzue.xml
@@ -21,14 +21,14 @@
                 android:id="@+id/txt_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:paddingLeft="@dimen/dp_15"
+                android:paddingRight="@dimen/dp_15"
+                android:paddingTop="@dimen/dp_10"
+                android:paddingBottom="@dimen/dp_10"
                 android:background="@color/white"
                 android:gravity="center_horizontal"
                 android:textColor="@color/tipTextColor"
-                android:textSize="12dp"
+                android:textSize="@dimen/dp_12"
                 android:textStyle="bold"
                 android:visibility="gone" />
 
@@ -37,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="@dimen/dp_10"
                 android:visibility="gone"></RelativeLayout>
 
             <ImageView
@@ -70,7 +70,7 @@
                 <ImageView
                     android:id="@+id/img_split"
                     android:layout_width="match_parent"
-                    android:layout_height="15dp"
+                    android:layout_height="@dimen/dp_15"
                     android:background="@color/menuSplitSpaceKongzue" />
 
                 <ImageView
@@ -81,15 +81,15 @@
                 <TextView
                     android:id="@+id/btn_cancel"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="@dimen/dp_50"
                     android:background="@drawable/button_menu_kongzue"
                     android:gravity="center"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
+                    android:paddingLeft="@dimen/dp_15"
+                    android:paddingRight="@dimen/dp_15"
                     android:singleLine="true"
                     android:text=""
                     android:textColor="@color/dark"
-                    android:textSize="16dp" />
+                    android:textSize="@dimen/dp_16" />
 
                 <ImageView
                     android:layout_width="match_parent"
