--- a/dialog/src/main/res/layout/bottom_menu_miui.xml
+++ b/dialog/src/main/res/layout/bottom_menu_miui.xml
@@ -15,8 +15,8 @@
             android:id="@+id/box_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="@dimen/dp_20"
+            android:layout_marginBottom="@dimen/dp_20"
             android:clickable="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
@@ -26,20 +26,20 @@
                 android:id="@+id/txt_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="@dimen/dp_5"
                 android:gravity="center_horizontal"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:paddingBottom="10dp"
+                android:paddingLeft="@dimen/dp_15"
+                android:paddingRight="@dimen/dp_15"
+                android:paddingBottom="@dimen/dp_10"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="@dimen/dp_20"
                 android:visibility="gone" />
 
             <RelativeLayout
                 android:id="@+id/box_custom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="@dimen/dp_10"
                 android:background="@color/white"
                 android:visibility="gone"></RelativeLayout>
 
@@ -59,21 +59,21 @@
                 <ImageView
                     android:id="@+id/img_split"
                     android:layout_width="match_parent"
-                    android:layout_height="15dp" />
+                    android:layout_height="@dimen/dp_15" />
 
                 <TextView
                     android:id="@+id/btn_cancel"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginHorizontal="20dp"
+                    android:layout_height="@dimen/dp_50"
+                    android:layout_marginHorizontal="@dimen/dp_20"
                     android:background="@drawable/button_selectdialog_miui_gray"
                     android:gravity="center"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
+                    android:paddingLeft="@dimen/dp_15"
+                    android:paddingRight="@dimen/dp_15"
                     android:singleLine="true"
                     android:text=""
                     android:textColor="@color/dialogButtonMIUITextGray"
-                    android:textSize="16dp" />
+                    android:textSize="@dimen/dp_16" />
 
             </LinearLayout>
 
