--- a/dialog/src/main/res/layout/dialog_full_screen.xml
+++ b/dialog/src/main/res/layout/dialog_full_screen.xml
@@ -34,10 +34,10 @@
 
             <ImageView
                 android:id="@+id/img_material_slide_bar"
-                android:layout_width="30dp"
-                android:layout_height="4dp"
+                android:layout_width="@dimen/dp_30"
+                android:layout_height="@dimen/dp_4"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="@dimen/dp_15"
                 android:src="@drawable/rect_share_material_tab"
                 android:visibility="gone" />
 
@@ -45,44 +45,44 @@
                 android:id="@+id/box_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="-15dp"
+                android:layout_marginBottom="@dimen/dp_15"
                 android:visibility="gone">
 
                 <TextView
                     android:id="@+id/btn_negative"
                     android:layout_width="wrap_content"
-                    android:layout_height="50dp"
+                    android:layout_height="@dimen/dp_50"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginLeft="@dimen/dp_15"
                     android:gravity="center_vertical"
                     android:text="关闭"
                     android:textColor="@color/dialogButtonIOSNormal"
-                    android:textSize="16dp"
+                    android:textSize="@dimen/dp_16"
                     android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/txt_title"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="55dp"
-                    android:layout_marginRight="55dp"
+                    android:layout_height="@dimen/dp_50"
+                    android:layout_marginLeft="@dimen/dp_55"
+                    android:layout_marginRight="@dimen/dp_55"
                     android:gravity="center"
                     android:text="标题"
                     android:textColor="@color/notificationTipTextColorMaterial"
-                    android:textSize="18dp"
+                    android:textSize="@dimen/sp_18"
                     android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/btn_positive"
                     android:layout_width="wrap_content"
-                    android:layout_height="50dp"
+                    android:layout_height="@dimen/dp_50"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="15dp"
+                    android:layout_marginRight="@dimen/dp_15"
                     android:gravity="center_vertical"
                     android:text="确定"
                     android:textColor="@color/dialogButtonIOSNormal"
-                    android:textSize="16dp"
+                    android:textSize="@dimen/sp_16"
                     android:visibility="gone" />
 
             </RelativeLayout>
@@ -91,7 +91,7 @@
                 android:id="@+id/box_custom"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="15dp" />
+                android:layout_marginTop="@dimen/dp_15" />
 
         </com.kongzue.dialog.util.view.InterceptYLinearLayout>
 
