--- a/dialog/src/main/res/layout/dialog_select_ios_left.xml
+++ b/dialog/src/main/res/layout/dialog_select_ios_left.xml
@@ -60,9 +60,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:layout_marginRight="@dimen/dp_15"
                     android:background="@drawable/editbox_dialog_bkg_ios"
                     android:gravity="center_vertical"
                     android:overScrollMode="never"
