--- a/dialog/src/main/res/layout/dialog_select_miui.xml
+++ b/dialog/src/main/res/layout/dialog_select_miui.xml
@@ -22,25 +22,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="@dimen/dp_30"
                 android:gravity="center"
                 android:text="标题"
                 android:textColor="@color/black"
-                android:textSize="20dp" />
+                android:textSize="@dimen/dp_20" />
 
             <com.kongzue.dialog.util.view.ContentTextView
                 android:id="@+id/txt_dialog_tip"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="50dp"
-                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="@dimen/dp_50"
+                android:layout_marginTop="@dimen/dp_15"
+                android:layout_marginRight="@dimen/dp_50"
+                android:layout_marginBottom="@dimen/dp_15"
                 android:gravity="center"
                 android:text="内容"
                 android:textColor="@color/black"
-                android:textSize="16dp" />
+                android:textSize="@dimen/dp_16" />
 
             <RelativeLayout
                 android:id="@+id/box_custom"
@@ -58,25 +58,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="25dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="@dimen/dp_25"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:layout_marginRight="@dimen/dp_25"
+                    android:layout_marginBottom="@dimen/dp_10"
                     android:background="@drawable/editbox_dialog_bkg_miui_light"
                     android:gravity="center_vertical"
                     android:overScrollMode="never"
-                    android:paddingHorizontal="15dp"
-                    android:paddingVertical="15dp"
-                    android:paddingLeft="5dp"
-                    android:paddingTop="5dp"
-                    android:paddingRight="5dp"
-                    android:paddingBottom="5dp"
-                    android:scrollbarSize="7dp"
+                    android:paddingHorizontal="@dimen/dp_15"
+                    android:paddingVertical="@dimen/dp_15"
+                    android:scrollbarSize="@dimen/dp_7"
                     android:scrollbarThumbVertical="@drawable/scrollbar_vertical_track"
                     android:scrollbars="vertical"
                     android:text="输入文本"
                     android:textColor="#000000"
-                    android:textSize="16dp"
+                    android:textSize="@dimen/sp_16"
                     android:visibility="gone" />
 
             </com.kongzue.dialog.util.view.MaxHeightLayout>
@@ -87,50 +83,50 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="25dp"
+                android:layout_marginHorizontal="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_15"
+                android:layout_marginBottom="@dimen/dp_25"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/btn_selectNegative"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginHorizontal="6dp"
+                    android:layout_height="@dimen/dp_50"
+                    android:layout_marginHorizontal="@dimen/dp_6"
                     android:layout_weight="1"
                     android:background="@drawable/button_selectdialog_miui_gray"
                     android:clickable="true"
                     android:gravity="center"
                     android:text="取消"
                     android:textColor="@color/dialogButtonMIUITextGray"
-                    android:textSize="17dp" />
+                    android:textSize="@dimen/sp_17" />
 
                 <TextView
                     android:id="@+id/btn_selectOther"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginHorizontal="6dp"
+                    android:layout_height="@dimen/dp_50"
+                    android:layout_marginHorizontal="@dimen/dp_6"
                     android:layout_weight="1"
                     android:background="@drawable/button_selectdialog_miui_gray"
                     android:clickable="true"
                     android:gravity="center"
                     android:text="其他"
                     android:textColor="@color/dialogButtonMIUITextGray"
-                    android:textSize="17dp"
+                    android:textSize="@dimen/sp_17"
                     android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/btn_selectPositive"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginHorizontal="6dp"
+                    android:layout_height="@dimen/dp_50"
+                    android:layout_marginHorizontal="@dimen/dp_6"
                     android:layout_weight="1"
                     android:background="@drawable/button_selectdialog_miui_blue"
                     android:clickable="true"
                     android:gravity="center"
                     android:text="确定"
                     android:textColor="@color/white"
-                    android:textSize="17dp" />
+                    android:textSize="@dimen/sp_17" />
             </LinearLayout>
 
         </LinearLayout>
