--- a/dialog/src/main/res/layout/dialog_share_ios.xml
+++ b/dialog/src/main/res/layout/dialog_share_ios.xml
@@ -13,30 +13,30 @@
             android:id="@+id/box_share"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp_10"
+            android:layout_marginBottom="@dimen/dp_10"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="10dp"
+                android:paddingTop="@dimen/dp_10"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/txt_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="25dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginLeft="@dimen/dp_25"
+                    android:layout_marginTop="@dimen/dp_5"
+                    android:layout_marginRight="@dimen/dp_25"
+                    android:layout_marginBottom="@dimen/dp_15"
                     android:gravity="center_horizontal"
                     android:text=""
                     android:textColor="@color/tipTextColor"
-                    android:textSize="12dp"
+                    android:textSize="@dimen/sp_12"
                     android:textStyle="bold"
                     android:visibility="gone" />
 
@@ -55,7 +55,7 @@
 
                 <com.kongzue.dialog.util.view.IOSScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="110dp"
+                    android:layout_height="@dimen/dp_110"
                     android:clipToPadding="false"
                     android:overScrollMode="never"
                     android:scrollbars="none">
@@ -65,8 +65,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
+                        android:paddingLeft="@dimen/dp_10"
+                        android:paddingRight="@dimen/dp_10"
 
                         android:orientation="horizontal">
 
@@ -82,10 +82,10 @@
             android:id="@+id/box_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="-2dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp">
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_2"
+            android:layout_marginRight="@dimen/dp_10"
+            android:layout_marginBottom="@dimen/dp_10">
 
             <TextView
                 android:id="@+id/btn_cancel"
@@ -93,12 +93,12 @@
                 android:layout_height="53dp"
                 android:background="@drawable/button_menu_ios_light"
                 android:gravity="center"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
+                android:paddingLeft="@dimen/dp_15"
+                android:paddingRight="@dimen/dp_15"
                 android:singleLine="true"
                 android:text="CANCEL"
                 android:textColor="@color/dialogButtonIOSNormal"
-                android:textSize="19dp"
+                android:textSize="@dimen/sp_19"
                 android:textStyle="bold" />
 
         </RelativeLayout>
