--- a/dialog/src/main/res/layout/dialog_wait.xml
+++ b/dialog/src/main/res/layout/dialog_wait.xml
@@ -11,13 +11,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:minWidth="125dp"
-        android:minHeight="125dp">
+        android:minWidth="@dimen/dp_125"
+        android:minHeight="@dimen/dp_125">
 
         <RelativeLayout
             android:id="@+id/box_blur"
-            android:layout_width="125dp"
-            android:layout_height="125dp"></RelativeLayout>
+            android:layout_width="@dimen/dp_125"
+            android:layout_height="@dimen/dp_125"></RelativeLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -28,49 +28,49 @@
 
             <RelativeLayout
                 android:id="@+id/box_progress"
-                android:layout_width="65dp"
-                android:layout_height="65dp">
+                android:layout_width="@dimen/dp_65"
+                android:layout_height="@dimen/dp_65">
 
                 <com.kongzue.dialog.util.view.ProgressView
                     android:id="@+id/progress"
-                    app:borderWidth ="1.5dp"
+                    app:borderWidth ="@dimen/dp_1_5"
                     android:layout_centerInParent="true"
-                    android:layout_width="55dp"
-                    android:layout_height="55dp" />
+                    android:layout_width="@dimen/dp_55"
+                    android:layout_height="@dimen/dp_55" />
 
             </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/box_tip"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
+                android:layout_width="@dimen/dp_65"
+                android:layout_height="@dimen/dp_65"
                 android:visibility="gone"/>
 
             <RelativeLayout
                 android:id="@+id/box_progress_gif"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
+                android:layout_width="@dimen/dp_55"
+                android:layout_height="@dimen/dp_55"
                 android:visibility="gone">
                 <pl.droidsonroids.gif.GifImageView
                     android:id="@+id/progress_gif"
-                    app:borderWidth ="1.5dp"
+                    app:borderWidth ="@dimen/dp_1_5"
                     android:layout_centerInParent="true"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp" />
+                    android:layout_width="@dimen/dp_45"
+                    android:layout_height="@dimen/dp_45" />
             </RelativeLayout>
 
             <TextView
                 android:id="@+id/txt_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginRight="15dp"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_15"
                 android:gravity="center"
                 android:maxLines="3"
                 android:text="Tip"
                 android:textColor="@color/white"
-                android:textSize="14dp" />
+                android:textSize="@dimen/sp_14" />
 
         </LinearLayout>
 
