--- a/dialog/src/main/res/layout/item_bottom_menu_ios.xml
+++ b/dialog/src/main/res/layout/item_bottom_menu_ios.xml
@@ -6,13 +6,13 @@
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="53dp"
+        android:layout_height="@dimen/dp_53"
         android:gravity="center"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
+        android:paddingLeft="@dimen/dp_15"
+        android:paddingRight="@dimen/dp_15"
         android:singleLine="true"
         android:text=""
         android:textColor="@color/dialogButtonIOSNormal"
-        android:textSize="19dp" />
+        android:textSize="@dimen/sp_19" />
 
 </LinearLayout>
