--- a/dialog/src/main/res/layout/item_bottom_menu_kongzue.xml
+++ b/dialog/src/main/res/layout/item_bottom_menu_kongzue.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:paddingBottom="14dp"
-    android:paddingLeft="15dp"
-    android:paddingRight="15dp"
-    android:paddingTop="14dp"
+    android:paddingBottom="@dimen/dp_14"
+    android:paddingLeft="@dimen/dp_15"
+    android:paddingRight="@dimen/dp_15"
+    android:paddingTop="@dimen/dp_14"
     android:singleLine="true"
     android:text=""
     android:textColor="@color/dark"
-    android:textSize="16dp" />
+    android:textSize="@dimen/sp_16" />
