--- a/dialog/src/main/res/layout/item_share_ios.xml
+++ b/dialog/src/main/res/layout/item_share_ios.xml
@@ -2,20 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="wrap_content"
     android:gravity="center"
-    android:padding="8dp"
+    android:padding="@dimen/dp_8"
     android:layout_height="wrap_content">
 
     <com.kongzue.dialog.util.view.IOSItemImageView
         android:id="@+id/img_icon"
-        android:layout_width="57dp"
-        android:layout_height="57dp"/>
+        android:layout_width="@dimen/dp_57"
+        android:layout_height="@dimen/dp_57"/>
 
     <TextView
         android:id="@+id/txt_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="35dp"
-        android:textSize="10dp"
+        android:minHeight="@dimen/dp_35"
+        android:textSize="@dimen/dp_10"
         android:maxLines="2"
         android:ellipsize="end"
         android:text=""
